--- a/OnlineStoreMVC/Content/webcss/layout.css
+++ b/OnlineStoreMVC/Content/webcss/layout.css
@@ -220,7 +220,7 @@
 
 /*Columns container*/
 .columns-container {
-    background-color: #F4F6F2;
+    /*background-color: #F4F6F2;*/
 }
 
 /*Menu product*/
